@@ -1226,7 +1226,8 @@ static SyscallTableEntry syscall_main_table[] = {
    LINX_(__NR_fanotify_mark,     sys_fanotify_mark),    // 368
    LINXY(__NR_prlimit64,         sys_prlimit64),        // 369
    LINXY(__NR_name_to_handle_at, sys_name_to_handle_at),// 370
-   LINXY(__NR_open_by_handle_at, sys_open_by_handle_at) // 371
+   LINXY(__NR_open_by_handle_at, sys_open_by_handle_at),// 371
+   LINXY(__NR_clock_adjtime,     sys_clock_adjtime)     // 372
 };
 
 
